Fri Jan 23 21:31:09 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/CodecFactory/IOP_Codec_include.pidl:
        * tao/Compression/Compression_include.pidl:
        * tao/IORInterceptor/IORInfo.pidl:
        * tao/Monitor/Monitor_include.pidl:
        * tao/ObjRefTemplate/ObjectReferenceTemplate_include.pidl:
        * tao/PI/PI_include.pidl:
        * tao/PI_Server/PI_Server_include.pidl:
        * tao/PortableServer/PortableServer_include.pidl:
        * tao/RTCORBA/RTCORBA_include.pidl:
        * tao/RTPortableServer/RTPortableServer_include.pidl:
        * tao/RTScheduling/RTScheduler_include.pidl:

          Modification to yesterday's commit:
          Thu Jan 22 22:58:21 UTC 2009  Adam Mitz  <mitza@ociweb.com>
          Now using a different workaround as suggested by Johnny Willemsen.

Fri Jan 23 15:21:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CORBALOC_Parser.cpp:
          Use prefix increment

        * tao/default_resource.cpp:
        * tao/ORB.cpp:
        * tao/ORB_Core.cpp:
        * tao/Transport.cpp:
          Various fixes and improvements to debug messages

        * tao/Strategies/DIOP_Profile.cpp:
          Log an error why the IOR is invalid

Fri Jan 23 13:17:09 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/ForwardRequest/run_test.pl:
        * tests/Portable_Interceptors/PolicyFactory/run_test.pl:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/run_test.pl:
        * tests/Portable_Interceptors/Redirection/run_test.pl:
          Optimized scripts for Win CE targets

Fri Jan 23 08:03:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/POA/EndpointPolicy/run_test_dh.pl:
        * tests/POA/EndpointPolicy/run_test_lh.pl:
        * tests/POA/Explicit_Activation/run_test.pl:
        * tests/POA/Loader/run_test.pl:
        * tests/POA/On_Demand_Activation/run_test.pl:
        * tests/POA/On_Demand_Loading/run_test.pl: