@@ -1,3 +1,11 @@
+Fri Jan 23 23:05:42 UTC 2009  Adam Mitz  <mitza@ociweb.com>
+
+        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Request_Dispatcher.cpp:
+        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:
+
+          Updated code that calls orb_core->adapter_registry ()
+          because the return type is now a reference and not a pointer.
+
 Fri Jan 23 21:31:09 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * tao/CodecFactory/IOP_Codec_include.pidl:
